--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       context: ../MVStudio-Backend
     volumes:
       - static_volume:/MVStudio-Backend/static
+      - ../MVStudio-Backend:/MVStudio-Backend
     ports:
       - "8000:8000"
     environment:
@@ -36,7 +37,8 @@ services:
       - mvs
     restart: always
     command: >
-      sh -c "python manage.py makemigrations &&
+      sh -c "sleep 5 &&
+            python manage.py makemigrations &&
             python manage.py migrate &&
             gunicorn --bind 0.0.0.0:8000 config.wsgi:application"
 
