feat : 회원가입 기능 수정 및 회원 정보 조회 기능 구현

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -41,7 +41,7 @@ services:
             python manage.py makemigrations &&
             python manage.py makemigrations member &&
             python manage.py migrate &&
-            gunicorn --bind 0.0.0.0:8000 config.wsgi:application"
+            python manage.py runserver 0.0.0.0:8000"
 
 volumes:
   db_data:
