--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ gunicorn==22.0.0
 inflection==0.5.1
 mysql==0.0.3
 mysqlclient==2.2.4
+openai==1.35.10
+openapi==2.0.0
 packaging==24.1
 PyMySQL==1.1.1
 pytz==2024.1
@@ -14,3 +16,4 @@ PyYAML==6.0.1
 sqlparse==0.5.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
+logger~=1.4
