--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
 boto3==1.34.139
 botocore==1.34.139
-django-storages
+django-storages==1.14.3
 Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.2
@@ -16,6 +16,8 @@ packaging==24.1
 PyMySQL==1.1.1
 pytz==2024.1
 PyYAML==6.0.1
+social-auth-app-django==5.4.1
+social-auth-core==4.5.4
 sqlparse==0.5.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
