--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
 boto3==1.34.139
 botocore==1.34.139
-django-storages
+django-storages==1.14.3
 Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.2
