--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,7 @@ sqlparse==0.5.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
 logger~=1.4
+numpy==2.0.0
+opencv-python-headless==4.10.0.84
+moviepy==1.0.3
+
