feat : 뮤직비디오 나라별 조회 기능 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,6 @@
 version: '3'
 
 services:
-  db:
-    image: mysql:8.0
-    container_name: MVStudio-MySQL
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-
-    networks:
-      - mvs
-
   backend:
     container_name: MVStudio-Backend
     build:
@@ -40,14 +24,11 @@ services:
       sh -c "sleep 5 &&
             python manage.py makemigrations &&
             python manage.py makemigrations member &&
+            python manage.py makemigrations music_videos &&
             python manage.py migrate &&
             gunicorn --bind 0.0.0.0:8000 config.wsgi:application"
 
 volumes:
-  db_data:
   static_volume:
 
-networks:
-  mvs:
-    driver: bridge
 
