--- a/.gitignore
+++ b/.gitignore
@@ -752,7 +752,7 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
-
+migrations/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
