--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,13 @@ Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.2
 drf-yasg==1.21.7
+google==3.0.0
+google-api-core==2.19.1
+google-api-python-client==2.136.0
+google-auth==2.31.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.2
 gunicorn==22.0.0
 inflection==0.5.1
 mysql==0.0.3
