--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,54 @@
 version: '3'
 
 services:
+  redis:
+    image: redis:6
+    ports:
+      - "6379:6379"
+    networks:
+      - mvs
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      - mvs
+
+  celery:
+    build: .
+    command: celery -A config worker --loglevel=info
+    depends_on:
+      - redis
+      - rabbitmq
+    networks:
+      - mvs
+
+  celery-beat:
+    build: .
+    command: celery -A config beat --loglevel=info
+    depends_on:
+      - redis
+      - rabbitmq
+    networks:
+      - mvs
+
+  flower:
+    image: mher/flower
+    command: celery flower -A config --port=5555 --broker=$CELERY_BROKER_URL
+    ports:
+      - "5555:5555"
+    depends_on:
+      - rabbitmq
+      - celery
+    environment:
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672/
+    networks:
+      - mvs
   backend:
     container_name: MVStudio-Backend
     build:
@@ -10,18 +58,14 @@ services:
       - ../MVStudio-Backend:/MVStudio-Backend
     ports:
       - "8000:8000"
-    environment:
-      DATABASE_HOST: ${DATABASE_HOST}
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USER: ${MYSQL_USER}
-      DATABASE_PASSWORD: ${MYSQL_PASSWORD}
-#    depends_on:
-#      - db
-#    networks:
-#      - mvs
+    depends_on:
+      - redis
+      - rabbitmq
+    networks:
+      - mvs
     restart: always
     command: >
-      sh -c "sleep 5 &&
+      sh -c "sleep 5 && %
             python manage.py makemigrations &&
             python manage.py makemigrations member &&
             python manage.py makemigrations music_videos &&
@@ -30,3 +74,6 @@ services:
 
 volumes:
   static_volume:
+
+networks:
+  mvs:
