--- a/requirements.txt
+++ b/requirements.txt
@@ -37,4 +37,5 @@ celery==5.4.0
 django-celery-beat==2.6.0
 redis==5.0.7
 flower==2.0.1
-
+elasticsearch-dsl>=7.0.0,<8.0.0
+django-elasticsearch-dsl>=7.0.0,<8.0.0
