--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-storages==1.14.3
 Django==5.0.6
 django-environ==0.11.2
 djangorestframework==3.15.2
+django-prometheus==2.3.1
 drf-yasg==1.21.7
 google==3.0.0
 google-api-core==2.19.1
